# LoadWaveSurfer

./: .gitignore  LICENSE  README.md  pyproject.toml
loadwavesurfer/: __init__.py  loadws.py
tests/: test_loadws.py
